# Minimal-3D-Viewer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/geometry/: aabb.hpp  material.hpp  mesh.hpp  mesh_loader.hpp  point_cloud.hpp  point_cloud_loader.hpp  vertex_component.hpp
include/graphics/: camera.hpp  dynamic_renderable_attribute.hpp  flying_camera.hpp  renderable_attribute.hpp  renderable_attributes.hpp  shader.hpp  shaders.hpp  texture.hpp  to_gl_type.hpp
include/graphics/renderable_attributes/: color_attribute.hpp  point_size_attribute.hpp  texture_attribute.hpp
include/graphics/renderables/: mesh_instance.hpp  point_cloud_instance.hpp
include/graphics/renderers/: mesh_line_renderer.hpp  mesh_point_renderer.hpp  mesh_renderer.hpp  point_cloud_renderer.hpp  renderer.hpp
include/util/: arx.hpp  extra_arx_parsers.hpp  for_each.hpp  function.hpp  image.hpp  logger.hpp  pack.hpp  rgb_color.hpp  rgba_color.hpp  string_indexer.hpp  string_literal.hpp  uix.hpp
shaders/: mesh_fragment.glsl  mesh_line_fragment.glsl  mesh_line_vertex.glsl  mesh_point_vertex.glsl  mesh_vertex.glsl  point_fragment.glsl  point_vertex.glsl
source/geometry/: mesh.ipp  mesh_loader.ipp  point_cloud.ipp  point_cloud_loader.ipp
source/graphics/: camera.cpp  flying_camera.cpp  shader.ipp
source/graphics/renderers/: mesh_line_renderer.cpp  mesh_point_renderer.cpp  mesh_renderer.cpp  point_renderer.cpp
